--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
     
     <!-- آیکون‌ها -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Favicon -->
+        <link rel="icon" href="darsjo.jpg" type="image/jpg">
+        <link rel="shortcut icon" href="darsjo.jpg" type="image/jpg">
+        <link rel="apple-touch-icon" href="darsjo.jpg">
+
     
     <style>
         @font-face {
@@ -2034,4 +2040,5 @@
     </style>
 </body>
 </html>
+
 
