--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <link rel="apple-touch-icon" href="darsjo.jpg">
 
     
-   <link rel="stylesheet" href="/path/to/styles.css">
+   <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -671,6 +671,7 @@
     </style>
 </body>
 </html>
+
 
 
 
