--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
         <link rel="icon" href="darsjo.jpg" type="image/jpg">
         <link rel="shortcut icon" href="darsjo.jpg" type="image/jpg">
         <link rel="apple-touch-icon" href="darsjo.jpg">
-
-    
-   <link rel="stylesheet" href="styles.css">
-
+    <!-- css -->
+       <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- هدر -->
@@ -671,7 +669,3 @@
     </style>
 </body>
 </html>
-
-
-
-
